--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 MySQL/docker/data/*
 Python3/jupyter/.ipynb_checkpoints/*
 .idea/*
+
+Neo4j/docker/neo4j/data/*
+Neo4j/docker/neo4j/logs/*
+Neo4j/jupyter/.ipynb_checkpoints/*
