--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Python3/jupyter/.ipynb_checkpoints/*
 Neo4j/docker/neo4j/data/*
 Neo4j/docker/neo4j/logs/*
 Neo4j/jupyter/.ipynb_checkpoints/*
+Neo4j/jupyter/.env
