--- a/Posgre/docker-compose.yml
+++ b/Posgre/docker-compose.yml
@@ -12,4 +12,4 @@ services:
       - ./docker/db/posgre_data:/var/lib/postgresql/data
       - ./docker/db/conf:/docker-entrypoint-initdb.d
     env_file:
-      - ./docker/db/.env
+      - ./docker/.env
