--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 
 [packages]
 flask-jsontools = "*"
-sqlalchemy = "*"
+sqlalchemy = ">=1.3.0"
 
 [requires]
 python_version = "3.6"
