--- a/MySQL/docker-compose.yml
+++ b/MySQL/docker-compose.yml
@@ -2,11 +2,7 @@ version: '3'
 services:
   db:
     image: mysql:5.7
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_USER: test
-      MYSQL_PASSWORD: test
-      MYSQL_DATABASE: test
+    env_file: .env
     ports:
        - "3306:3306"
     volumes:
