--- a/nginx/nginx_log_format.conf
+++ b/nginx/nginx_log_format.conf
@@ -9,7 +9,7 @@ log_format  ltsv  "time:$time_local"
     "\treqtime:$request_time"
     "\tcache:$upstream_http_x_cache"
     "\truntime:$upstream_http_x_runtime"
-    "\tvhost:$host";
+    "\tvhost:$host"
     "\tuser:$remote_user"
     "\tmethod:$request_method"
     "\tpath:$request_uri"
